--- a/document.html
+++ b/document.html
@@ -1496,7 +1496,7 @@
                                                         <div class="form-floating" id="inputSchedulePropDiv">
                                                             <select save_id="DocumentSchedulePropID" class="form-select"
                                                                 name="" id="inputScheduleProp">
-                                                                <option value="">Select Schedule</option>
+                                                                <option value="0">Select of property</option>
                                                             </select>
                                                             <label for="inputScheduleProp">Select Schedule</label>
                                                         </div>
@@ -1517,7 +1517,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-md-12">
-                                                        <div class="PropertyDetailsFormClone row">
+                                                        <div class="PropertyDetailsFormClone d-flex flex-column flex-wrap">
                                                             <div
                                                                 class="form-floating order-2 mb-3 col-md-12 PropertyDetailsFormInput">
                                                                 <textarea save_id="DocumentPropertyDetails"
@@ -1532,7 +1532,7 @@
                                                 </div>
                                             </div>
                                             <div class="col-md-12 mb-3">
-                                                <div class="row ps-3 pe-3">
+                                                <div class="row gy-2 ps-3 pe-3">
                                                     <h6>Bounded on the: -</h6>
                                                     <div class="form-floating col-md-6 p-0 pe-2">
                                                         <input save_id="DocumentBoundedNorthBy"
@@ -1569,7 +1569,7 @@
                                                 </div>
                                             </div>
                                             <div class="col-md-12 mb-3">
-                                                <div class="row ps-3 pe-3">
+                                                <div class="row gy-2 ps-3 pe-3">
                                                     <h6>Measuring: -</h6>
                                                     <div class="form-floating col-md-6 p-0 pe-2">
                                                         <input save_id="DocumentMeasuringEWN"
