--- a/document.html
+++ b/document.html
@@ -1496,7 +1496,7 @@
                                                         <div class="form-floating" id="inputSchedulePropDiv">
                                                             <select save_id="DocumentSchedulePropID" class="form-select"
                                                                 name="" id="inputScheduleProp">
-                                                                <option value="0">Select of property</option>
+                                                                <option value="0">Schedule of property</option>
                                                             </select>
                                                             <label for="inputScheduleProp">Select Schedule</label>
                                                         </div>
