--- a/document.html
+++ b/document.html
@@ -45,7 +45,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://unpkg.com/showdown@2.1.0/dist/showdown.min.js"></script>
     <style>
-        .form-control,.form-control:focus{
+        .form-control,.form-control:focus,.form-select,.form-select:focus{
             color: black;
         }
     </style>
@@ -1533,7 +1533,7 @@
                                             </div>
                                             <div class="col-md-12 mb-3">
                                                 <div class="row gy-2 ps-3 pe-3">
-                                                    <h6>Bounded on the: -</h6>
+                                                    <h6 class="text-start">Bounded on the: -</h6>
                                                     <div class="form-floating col-md-6 p-0 pe-2">
                                                         <input save_id="DocumentBoundedNorthBy"
                                                         deed_id="documentBoundedNorthBy"
@@ -1570,7 +1570,7 @@
                                             </div>
                                             <div class="col-md-12 mb-3">
                                                 <div class="row gy-2 ps-3 pe-3">
-                                                    <h6>Measuring: -</h6>
+                                                    <h6 class="text-start">Measuring: -</h6>
                                                     <div class="form-floating col-md-6 p-0 pe-2">
                                                         <input save_id="DocumentMeasuringEWN"
                                                         deed_id="documentMeasuringEWN"
