--- a/document.html
+++ b/document.html
@@ -1498,7 +1498,7 @@
                                                 <div class="row">
                                                     <div class="col-md-12 mb-3">
                                                         <div class="form-floating" id="inputSchedulePropDiv">
-                                                            <select save_id="DocumentSchedulePropID" class="form-select"
+                                                            <select deed_id="DocumentSchedulePropID" class="form-select"
                                                                 name="" id="inputScheduleProp">
                                                                 <option value="0">Schedule of property</option>
                                                             </select>
