--- a/document.html
+++ b/document.html
@@ -1898,7 +1898,7 @@
                                                 </table>
                                             </div>
                                             <div class="col-12">
-                                                <button type="button" name="next" id="save_button"
+                                                <button type="button" name="next" id="save_button" api="POST"
                                                     class="btn btn-primary float-end me-1" value="">Save</button>
                                                 <button type="button" name="previous"
                                                     class="btn btn-dark previous action-button-previous float-end me-1"
